Made several enhancements to home page and added mods modals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <router-outlet></router-outlet>
+<a *ngIf="showScrollToTopBtn" (click)="scrollToTop()" class="fixedbutton btn btn-light"><span class="fal fa-chevron-up"></span></a>
