--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/relevant-project-experience/relevant-project-experience.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/relevant-project-experience/relevant-project-experience.component.html
@@ -12,6 +12,21 @@
         <ng-template #formAccordionHeader>
             <div class="flex-fill">
                 <h3 class="h5">{{ section.title }}</h3>
+            
+                <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
+                    <button id="button-manage" dropdownToggle type="button" class="btn btn-light gsa-light-blue bg-primary-hover mr-4 py-1 dropdown-toggle"
+                        aria-controls="dropdown-manage" appStopClickPropagation>
+                        <span class="gsa-light-blue">Actions</span>
+                        <span class="caret"></span>
+                    </button>
+                    <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
+                        aria-labelledby="button-basic">
+                        <li role="menuitem"><a class="dropdown-item" (click)="openModal()">Create New Modification</a></li>
+                        <li role="menuitem"><a class="dropdown-item" (click)="openModHistoryModal()">View Modification History</a></li>
+                        <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li>
+                    </ul>
+                </span>
+                
             </div>
         </ng-template>
         <ng-template #formAccordionBody>
@@ -48,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-1">
+        <div class="col-1" *ngIf="offerStatus == 'In Progress'">
             <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
                 <span class="fa fa-pencil"></span>
             </button>
@@ -71,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-1">
+        <div class="col-1" *ngIf="offerStatus == 'In Progress'">
             <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
                 <span class="fa fa-pencil"></span>
             </button>
@@ -82,7 +97,7 @@
     </div>
         
     <hr>           
-    <div class="col mt-4 d-flex justify-content-center"> 
+    <div class="col mt-4 d-flex justify-content-center" *ngIf="offerStatus == 'In Progress'"> 
         <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openModal()">
             <span class="fa fa-plus mr-2"></span>
             Add Hazardous Material
@@ -124,7 +139,7 @@
 
 
 <!-- Modal Template -->
-<app-modal *ngIf="offerStatus == 'In Progress'"
+<app-modal
 [config]="{ modalTitle: section.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
     <ng-template #modalBody>
         <ng-container [ngTemplateOutlet]="editSection"></ng-container>
@@ -135,3 +150,18 @@
         <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
     </ng-template>
 </app-modal>
+
+
+<app-modal #modHistoryModal
+[config]="{ modalTitle: 'Modifications', showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="viewModHistory"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Close" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModHistoryModal()">
+    </ng-template>
+</app-modal>
+
+<ng-template #viewModHistory>
+    <h1>Mod History</h1>
+</ng-template>
