--- a/src/assets/theme/buttons.css
+++ b/src/assets/theme/buttons.css
@@ -282,7 +282,7 @@ button[class*='btn-outline-'] {
 /*
 button {
     width: auto !important;
-}
+}*/
 a.fixedbutton {
     position: fixed !important;
     bottom: 10px !important;
@@ -290,16 +290,24 @@ a.fixedbutton {
     display: block !important;
     z-index: 2000;
     text-align: center;
-    background: #005588bf;
+    background: white;
     padding: 12px;
-    color: white !important;
+    color: #005588 !important;
     font-size: 1rem;
-    font-weight: bold;
     border-radius: 50%;
     height: 3rem;
     width: 3rem;
     text-align: center;
+    opacity: 0.8;
 }
+a.fixedbutton .fal {
+  font-weight: bolder !important;
+}
+
+a.fixedbutton:hover {
+  opacity: 1;
+}
+/*
 .btn-primary,
 .gsa-primary-btn,
 input[type=submit] {
