--- a/src/app/modules/gsa-provide/views/home/home.component.html
+++ b/src/app/modules/gsa-provide/views/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="row m-0">
     <div class="col-12 p-0">  
-      <div class="bg-gsa-light-blue"  style="overflow: hidden; background-image: url(assets/images/content-art/istockphoto-545247618-1024x1024-recreated.svg); background-position: center bottom; background-size: cover; background-repeat: no-repeat;">
-        <div class="jumbotron col-7 m-5 bg-white shadow py-4 pull-5" style="background-color: rgba(255, 255, 255, 0.9) !important;">
+      <div class="bg-gsa-light-blue px-5 py-5"  style="overflow: hidden; background-image: url(assets/images/content-art/istockphoto-545247618-1024x1024-recreated.svg); background-position: center bottom; background-size: cover; background-repeat: no-repeat;">
+        <div class="">
+          <div class="jumbotron bg-white shadow py-4 mb-0 col-lg-7 col-xl-7" style="background-color: rgba(255, 255, 255, 0.9) !important;">
             <h1 class="display-4 m-0">
                 <strong style="font-weight: bold; color: #005588 !important;">GSA</strong>&nbsp;&nbsp;<span class="gsa-red"><span class="h3" style="color: #af3639 !important;">Vendor Services</span></span>
             </h1>
@@ -11,9 +12,12 @@
             <hr class="my-4 border-bottom">
             <p class=" gsa-medium-blue">Learn more about how to become a federal marketplace vendor or complete a questionnaire to find out if you business qualifies.</p>
             <p class="lead">
-              <a class="btn btn-primary" [routerLink]="['/vendor-resources']" role="button">Learn More</a>&nbsp;&nbsp;&nbsp;or&nbsp;&nbsp;&nbsp;<a class="btn btn-primary" href="#" role="button">Start Questionnaire</a>
+              <a class="btn btn-primary" [routerLink]="['/vendor-resources']" role="button">Learn More</a>
+              <span class="px-3">or</span>
+              <app-questionnaire></app-questionnaire>
             </p>
           </div>
+        </div>
       </div>
     </div>
   </div>
@@ -81,16 +85,16 @@
 
   <section class="px-0 m-0">
 
-    <div class="container-fluid px-0 bg-gsa-dark-blue">    
+    <div class="container-fluid py-4 bg-gsa-dark-blue">    
         <div class="mx-auto">
           <div class="">
               <div class="container px-5">
               <div class="row">
                 <div class="col pb-3 pt-4"> 
-                  <h4 class="h5 m-0 white d-inline mr-3">
+                  <h4 class="h2 m-0 white mr-3">
                     Register, Apply, and Sell to the Federal Government with our Complete Suite of Vendor Tools.
                   </h4>
-                  <a class="btn btn-outline-light btn-sm" [routerLink]="['/vendor-resources']">Start Here&nbsp;&nbsp;&#8250;</a>
+                  <a class="btn btn-outline-light mt-4" [routerLink]="['/vendor-resources']">Start Here&nbsp;&nbsp;&#8250;</a>
                 </div>
               </div>
             </div>
