--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -115,8 +115,8 @@
 <!-- Actions-->
 <ng-template #sectionActions>
 
-	<app-modal *ngIf="offerStatus == 'In Progress'"
-		[config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+	<app-modal
+		[config]="{ modalTitle: sectionData.name, showDefaultOpenButton: offerStatus == 'In Progress', defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
 		<ng-template #modalBody>
 			<ng-container [ngTemplateOutlet]="editSection"></ng-container>
 		</ng-template>
@@ -135,11 +135,26 @@
 		</button>
 		<ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
 			aria-labelledby="button-basic">
-			<li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
-			<li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
+            <li role="menuitem"><a class="dropdown-item" (click)="openModal()">Create New Modification</a></li>
+            <li role="menuitem"><a class="dropdown-item" (click)="openModHistoryModal()">View Modification History</a></li>
 			<li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li>
 			<!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
 		</ul>
 	</span>
 
+</ng-template>
+
+
+<app-modal #modHistoryModal
+[config]="{ modalTitle: 'Modifications', showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="viewModHistory"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Close" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModHistoryModal()">
+    </ng-template>
+</app-modal>
+
+<ng-template #viewModHistory>
+    <h1>Mod History</h1>
 </ng-template>
