--- a/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1" *ngIf="offerStatus == 'In Progress'">
                 <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
                     <span class="fa fa-pencil"></span>
                 </button>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1" *ngIf="offerStatus == 'In Progress'">
                 <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
                     <span class="fa fa-pencil"></span>
                 </button>
@@ -83,7 +83,7 @@
         </div>
         
         <hr>           
-        <div class="col mt-4 d-flex justify-content-center"> 
+        <div class="col mt-4 d-flex justify-content-center" *ngIf="offerStatus == 'In Progress'"> 
             <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openModal()">
                 <span class="fa fa-plus mr-2"></span>
                 Add Negotiator
@@ -173,7 +173,7 @@
 <!-- Actions-->
 <ng-template #sectionActions>
 
-    <app-modal *ngIf="offerStatus == 'In Progress'"
+    <app-modal
         [config]="{ modalTitle: sectionData.name, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
         <ng-template #modalBody>
             <ng-container [ngTemplateOutlet]="editSection"></ng-container>
@@ -193,11 +193,28 @@
         </button>
         <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
             aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
-            <li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
+            <li role="menuitem"><a class="dropdown-item" (click)="openModal()">Create New Modification</a></li>
+            <li role="menuitem"><a class="dropdown-item" (click)="openModHistoryModal()">View Modification History</a></li>
             <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li>
             <!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
         </ul>
     </span>
 
+</ng-template>
+
+
+
+
+<app-modal #modHistoryModal
+[config]="{ modalTitle: 'Modifications', showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="viewModHistory"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Close" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModHistoryModal()">
+    </ng-template>
+</app-modal>
+
+<ng-template #viewModHistory>
+    <h1>Mod History</h1>
 </ng-template>
