--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/point-of-contacts/point-of-contacts.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/point-of-contacts/point-of-contacts.component.html
@@ -17,6 +17,21 @@
                 <div class="flex-fill">
                     <h3 class="h5">{{ section.title }}</h3>
                 </div>
+                
+                <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
+                    <button id="button-manage" dropdownToggle type="button" class="btn btn-light gsa-light-blue bg-primary-hover mr-4 py-1 dropdown-toggle"
+                        aria-controls="dropdown-manage" appStopClickPropagation>
+                        <span class="gsa-light-blue">Actions</span>
+                        <span class="caret"></span>
+                    </button>
+                    <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
+                        aria-labelledby="button-basic">
+                        <li role="menuitem"><a class="dropdown-item" (click)="openModal()">Create New Modification</a></li>
+                        <li role="menuitem"><a class="dropdown-item" (click)="openModHistoryModal()">View Modification History</a></li>
+                        <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li>
+                    </ul>
+                </span>
+                
             </ng-template>
             <ng-template #formAccordionBody>
                 <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
@@ -52,7 +67,7 @@
                 </div>
             </div>
             </div>
-        <div class="col-1">
+        <div class="col-1" *ngIf="offerStatus == 'In Progress'">
             <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
                 <span class="fa fa-pencil"></span>
             </button>
@@ -85,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-1">
+        <div class="col-1" *ngIf="offerStatus == 'In Progress'">
             <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
                 <span class="fa fa-pencil"></span>
             </button>
@@ -96,7 +111,7 @@
     </div>
 
     <hr>           
-    <div class="col mt-4 d-flex justify-content-center"> 
+    <div class="col mt-4 d-flex justify-content-center" *ngIf="offerStatus == 'In Progress'"> 
         <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openModal()">
             <span class="fa fa-plus mr-2"></span>
             Add Point of Contact
@@ -204,7 +219,7 @@
 
 
 <!-- Modal Template -->
-<app-modal *ngIf="offerStatus == 'In Progress'"
+<app-modal
     [config]="{ modalTitle: section.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
     <ng-template #modalBody>
         <ng-container [ngTemplateOutlet]="editSection"></ng-container>
@@ -215,3 +230,19 @@
         <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
     </ng-template>
 </app-modal>
+
+
+
+<app-modal #modHistoryModal
+[config]="{ modalTitle: 'Modifications', showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="viewModHistory"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Close" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModHistoryModal()">
+    </ng-template>
+</app-modal>
+
+<ng-template #viewModHistory>
+    <h1>Mod History</h1>
+</ng-template>
