Fixed typos, removed duns section.

--- a/src/app/modules/gsa-provide/views/vendor-resources/vendor-resources.component.html
+++ b/src/app/modules/gsa-provide/views/vendor-resources/vendor-resources.component.html
@@ -134,7 +134,7 @@
             </div>
           </div>
         </li>
-        <li class="tablet:grid-col-4 usa-card">
+        <!-- <li class="tablet:grid-col-4 usa-card">
           <div class="usa-card__container">
             <header class="usa-card__header">
               <h2 class="usa-card__heading">DUNS</h2>
@@ -148,7 +148,7 @@
                 <button class="btn btn-outline-primary btn-small">Learn more&nbsp;&nbsp;&nbsp;<span class="small fas fa-chevron-right"></span></button>
             </div>
           </div>
-        </li>
+        </li> -->
     </ul>
 </ng-template>
 
@@ -349,7 +349,7 @@
                           </span>
                       </div>
                       <div class="col-9 text-left">   
-                        <h1 class="h4">Congratulaions! You have completed the guide. Now, let's get started on your first offer.</h1>
+                        <h1 class="h4">Congratulations! You have completed the guide. Now, let's get started on your first offer.</h1>
                       </div>
                 </div>
                 
