--- a/src/app/modules/supplier-portal/components/offer-form-side-nav/offer-form-side-nav.component.html
+++ b/src/app/modules/supplier-portal/components/offer-form-side-nav/offer-form-side-nav.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="menuItems; else errorMsg">
 
-    <div class="btn btn-outline-primary d-xs-block d-sm-block d-md-none mb-4">Form Navigator</div>
+    <!-- <div class="btn btn-outline-primary d-xs-block d-sm-block d-md-none mb-4">Form Navigator</div> -->
     <h4 class="mb-3">Offer Navigator</h4>
     <ul class="list-group list-group-flush card shadow br-6">
         <ng-container *ngFor="let item of menuItems">
