Updated alerts css and classes

--- a/src/app/modules/offer-portal/components/organization-details-banner/organization-details-banner.component.html
+++ b/src/app/modules/offer-portal/components/organization-details-banner/organization-details-banner.component.html
@@ -1,4 +1,4 @@
-<section class="shadow bg-gsa-medium-blue white d-block sticky-top-content" style="z-index: 8;">
+<section class="shadow bg-gsa-medium-blue white d-block sticky-top-content" style="z-index: 8; top: -1px !important">
     <div class="container-fluid py-2 px-5">
         <div class="row justify-content-center">
             <div class="col-md">
