--- a/src/app/modules/offer-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/negotiators/negotiators.component.html
@@ -97,8 +97,8 @@
 <ng-template #editSection>
     <form id="negotiators">
 
-        <div class="usa-alert usa-alert-warning mb-4">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--warning mb-4">
+            <div class="usa-alert__body">
                 <p>
                     <b>Who will negotiate your eOffer?</b>
                 </p>
