--- a/src/app/modules/offer-portal/views/offer-form/upload-documents/upload-documents.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/upload-documents/upload-documents.component.html
@@ -526,8 +526,8 @@
 <ng-template #editSection>
     <form id="uploadDocuments">
 
-        <div class="usa-alert usa-alert-info mb-4">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--info mb-4">
+            <div class="usa-alert__body">
                 <p><b class="black">Attach supporting documents to this eOffer.</b></p>
                 <p>Upload all documents associated with your eOffer.</p>
                 <p>Some of the attachments are required based on the responses provided in other templates.</p>
