--- a/src/app/modules/vendor-portal/access-point/access-point.component.html
+++ b/src/app/modules/vendor-portal/access-point/access-point.component.html
@@ -369,8 +369,8 @@
                 <span class="fad fa-megaphone mr-3"></span>
                 Announcements
             </h1>   
-            <div class="usa-alert usa-alert--warning usa-alert-warning usa-alert--no-icon mb-3">
-                <div class="usa-alert-body">                
+            <div class="usa-alert usa-alert--warning usa-alert--no-icon mb-3">
+                <div class="usa-alert__body">                
                     <b style="font-size: larger;">SAM</b>
                     <p>
                         As of <b>April 4, 2022</b>, the government will no longer use the Data Universal Numbering System (DUNS) number as the
@@ -379,8 +379,8 @@
                     </p>
                 </div>
             </div>
-            <div class="usa-alert usa-alert--warning usa-alert-warning usa-alert--no-icon mb-3">
-                <div class="usa-alert-body">
+            <div class="usa-alert usa-alert--warning usa-alert--no-icon mb-3">
+                <div class="usa-alert__body">
                     <b style="font-size: larger;">Vendor Portal</b>
                     <p>
                         Starting March 8, 2021, contractors must use FAS ID multi-factor authentication to access eOffer/eMod. For more
@@ -388,8 +388,8 @@
                     </p>
                 </div>
             </div>
-            <div class="usa-alert usa-alert--warning usa-alert-warning usa-alert--no-icon mb-3">
-                <div class="usa-alert-body">
+            <div class="usa-alert usa-alert--warning usa-alert--no-icon mb-3">
+                <div class="usa-alert__body">
                     <b style="font-size: larger;">eBuy</b>
                     <p>
                         Starting in October 2020, contractors will use their GSA FAS ID email address, instead of the contract number to log in
@@ -397,8 +397,8 @@
                     </p>
                 </div>
             </div>
-            <div class="usa-alert usa-alert--warning usa-alert-warning usa-alert--no-icon mb-3">
-                <div class="usa-alert-body">
+            <div class="usa-alert usa-alert--warning usa-alert--no-icon mb-3">
+                <div class="usa-alert__body">
                     <b style="font-size: larger;">Vendor Portal</b>
                     <p>
                         Attention eMod users! We are making improvements to eMod based on your feedback. As of February 25th, you will be able
