--- a/src/app/modules/offer-portal/views/offer-form/available-offerings/available-offerings.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/available-offerings/available-offerings.component.html
@@ -119,8 +119,8 @@
 <ng-template #editSin>
     <form id="availableOfferings">
 
-        <div class="usa-alert usa-alert-warning mb-5">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--warning mb-5">
+            <div class="usa-alert__body">
                 <p>                    
                     <b class="black">What goods and services do you provide?</b>
                 </p>
@@ -190,8 +190,8 @@
 <ng-template #editPreponderance>
     <form id="preponderanceOfWork">
 
-        <div class="usa-alert usa-alert-warning mb-5">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--warning mb-5">
+            <div class="usa-alert__body">
                 <p>                    
                     <b class="black">Please complete the 'Preponderance of Work' section only after you have completed adding all offerings to your offer.</b>
                 </p>
