--- a/src/app/modules/offer-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -83,8 +83,8 @@
 <!-- Edit Section -->
 <ng-template #editSection>
 
-	<div class="usa-alert usa-alert-warning mb-4">
-		<div class="usa-alert-body">
+	<div class="usa-alert usa-alert--warning mb-4">
+		<div class="usa-alert__body">
 			<p>
 				<strong>Is the information correct?</strong>
 			</p>
