--- a/src/app/modules/offer-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
@@ -66,8 +66,8 @@
 <!-- Edit Section -->
 <ng-template #editSection>
     <form id="pathwayToSuccess">
-        <div class="usa-alert usa-alert-warning mb-4">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--warning mb-4">
+            <div class="usa-alert__body">
                 <p>
                     Complete Section 1 if you are a new offeror OR complete Section 2 if you are an existing FSS contractor submitting a
                     streamlined offer.
