--- a/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/point-of-contacts/point-of-contacts.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/point-of-contacts/point-of-contacts.component.html
@@ -125,8 +125,8 @@
 <ng-template #editSection>
     <form id="negotiators">
 
-        <div class="usa-alert usa-alert-warning mb-4">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--warning mb-4">
+            <div class="usa-alert__body">
                 <p>
                     <b>Who is designated to be contacted for prompt Contract administration?</b>
                 </p>
