--- a/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
@@ -23,8 +23,8 @@
 <ng-template #editSection>
     <form id="solicitationClauses">
 
-        <div class="usa-alert usa-alert-info mb-4">
-            <div class="usa-alert-body">
+        <div class="usa-alert usa-alert--info mb-4">
+            <div class="usa-alert__body">
                 <p class="clearBoth">Please respond to the below terms and conditions that apply to your proposed
                     offerings.
                 </p>
