--- a/src/app/modules/offer-portal/views/offer-form/solicitation-provisions/technical-proposal/quality-control/quality-control.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/solicitation-provisions/technical-proposal/quality-control/quality-control.component.html
@@ -138,8 +138,8 @@
 <!-- Edit Section -->
 <ng-template #editSection> 
     
-    <div class="usa-alert usa-alert-warning mb-4">
-        <div class="usa-alert-body">
+    <div class="usa-alert usa-alert--warning mb-4">
+        <div class="usa-alert__body">
             <p>
                 The Offeror is to submit a single narrative for this factor, regardless of the number of products/services offered.
             </p>
